Bug 211398 - Google Maps rendering corruption in simulator with ANGLE
Summary: Google Maps rendering corruption in simulator with ANGLE
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGL (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: James Darpinian
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-05-04 14:02 PDT by James Darpinian
Modified: 2020-05-07 11:48 PDT (History)
9 users (show)

See Also:


Attachments
Fix Google Maps rendering corruption in simulator. Respect IOSurface row stride. (3.67 KB, patch)
2020-05-04 14:10 PDT, James Darpinian
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description James Darpinian 2020-05-04 14:02:01 PDT
Google Maps rendering corruption in simulator with ANGLE
Comment 1 James Darpinian 2020-05-04 14:10:53 PDT
Created attachment 398412 [details]
Fix Google Maps rendering corruption in simulator. Respect IOSurface row stride.
Comment 2 EWS Watchlist 2020-05-04 14:11:39 PDT
Note that there are important steps to take when updating ANGLE. See http://trac.webkit.org/wiki/UpdatingANGLE
Comment 3 Alex Christensen 2020-05-07 11:38:48 PDT
Comment on attachment 398412 [details]
Fix Google Maps rendering corruption in simulator. Respect IOSurface row stride.

View in context: https://bugs.webkit.org/attachment.cgi?id=398412&action=review

> Source/ThirdParty/ANGLE/src/libANGLE/renderer/gl/eagl/IOSurfaceSurfaceEAGL.mm:86
> +      mRowStrideInPixels(0),

Don't you use initializer lists in the header in ANGLE?

> Source/ThirdParty/ANGLE/src/libANGLE/renderer/gl/eagl/IOSurfaceSurfaceEAGL.mm:98
> +    // Hopefully the number of bytes per row is always an integer number of pixels.

I'd put a blank line above this, but that can also be done upstream.
Comment 4 EWS 2020-05-07 11:42:25 PDT
Committed r261322: <https://trac.webkit.org/changeset/261322>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 398412 [details].
Comment 5 Radar WebKit Bug Importer 2020-05-07 11:43:15 PDT
<rdar://problem/62986285>