Fix Google Maps rendering corruption in simulator with ANGLE https://bugs.webkit.org/show_bug.cgi?id=211398

glReadPixels call needs to respect the row stride of the IOSurface.

Patch by James Darpinian <jdarpinian@chromium.org> on 2020-05-07
Reviewed by Alex Christensen.

* src/libANGLE/renderer/gl/eagl/IOSurfaceSurfaceEAGL.h:
* src/libANGLE/renderer/gl/eagl/IOSurfaceSurfaceEAGL.mm:
(rx::IOSurfaceSurfaceEAGL::IOSurfaceSurfaceEAGL):
(rx::IOSurfaceSurfaceEAGL::releaseTexImage):

Canonical link: https://commits.webkit.org/224488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261322 268f45cc-cd09-0410-ab3c-d52691b4dbfc